Background overflow fix

--- a/src/components/banner-we-are/banner-we-are.scss
+++ b/src/components/banner-we-are/banner-we-are.scss
@@ -10,6 +10,7 @@
     left: 0;
     height: 100%;
     min-width: 480px;
+    overflow-x: hidden;
 }
 
 .banner-we-are-foreground {
